# drumchords

./: Cargo.toml  README.md  app.js  app_bg.wasm  index.html
.github/workflows/: pages.yml  test.yml
src/: app.rs  audio.rs  lib.rs  main.rs  midi.rs  periodic_updater.rs  synth.rs
src/app/: mod.rs  pattern_designer.rs  toggle.rs  utils.rs
src/synth/: midi_writer.rs  mod.rs  sound_bank.rs
web_src/: index.html  manifest.json  sw.js
