[package]
authors = ["joel nises <joel.nises@gmail.com>"]
edition = "2018"
name = "drumchords"
version = "0.3.1"

[lib]
# rlib needed for tests
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = {version = "1.0", features = ["backtrace"]} 
cfg-if = "1.0" 
chrono = "0.4" 
console_error_panic_hook = "0.1" 
cpal = {version = "0.13", features = ["wasm-bindgen"]} 
crossbeam = "0.8" 
eframe = "0.14" 
env_logger = "0.9" 
hound = "3.4.0" 
itertools = "0.10" 
js-sys = "0.3" 
log = "0.4" 
midir = "0.7" 
midly = {version = "0.5", default-features = false, features = ["std", "alloc"]} 
num = "0.4.0" 
parking_lot = {version = "0.11", features = ["wasm-bindgen"]} 
rfd = "0.5" 
ringbuf = "0.2" 
web-sys = {version = "0.3", features = ["console", "Window", "HtmlAnchorElement", "Document", "CssStyleDeclaration", "Url"]} 
wmidi = "4.0" #< TODO replace this with midly?
enum-map = "1.1"
enum-iterator = "0.7"
strum_macros = "0.21"
rubato = "0.10"

[profile.release]
# make things smaller
codegen-units = 1
lto = true
opt-level = 'z'

[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-Os']
# wasm-opt doesn't seem to work on apple silicon yet
wasm-opt = false
