[package]
authors = ["joel nises <joel.nises@gmail.com>"]
edition = "2021"
name = "drumchords"
version = "8.0.0"

[lib]
# rlib needed for tests
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = {version = "1.0", features = ["backtrace"]}
array-init = "2.0"
cfg-if = "1.0"
chrono = "0.4"
console_error_panic_hook = "0.1"
cpal = {version = "0.14", features = ["wasm-bindgen"]}
crossbeam = "0.8"
eframe = "0.16"
enum-iterator = "1.2" 
enum-map = "2.0" 
env_logger = "0.10" 
hound = "3.4.0" 
itertools = "0.10" 
js-sys = "0.3" 
log = "0.4" 
midir = "0.9" 
midly = {version = "0.5", default-features = false, features = ["std", "alloc"]} 
num = "0.4.0" 
parking_lot = {version = "0.12"}
rfd = "0.10" 
ringbuf = "0.3" 
rubato = "0.10" 
static_assertions = "1.1" 
strum_macros = "0.24" 
web-sys = {version = "0.3", features = [
  "console",
  "Window",
  "HtmlAnchorElement",
  "Document",
  "CssStyleDeclaration",
  "Url",
]} 
wmidi = "4.0" #< TODO replace this with midly?

[profile.release]
# make things smaller
codegen-units = 1
lto = true
opt-level = 's'

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os', '--fast-math']
